--- a/Navin.css
+++ b/Navin.css
@@ -53,8 +53,14 @@
   }
   p {
     position: absolute;
-    color: rgb(8, 0, 223);
+    color: rgb(1, 0, 7);
     top: 60%;
     font-family:Arial, Helvetica, sans-serif;
     font-weight: 900;
+  }
+  @media screen and (max-width:500px){
+    .container{
+      background-image: url('book\ bg.webp');
+      background-size: cover;
+    }
   }
